# Web_Sitesi_Guvenlik_Skoru_Hesaplayici

./: .gitattributes  .gitignore  LICENSE  README.md  env.example  main.py  mcp_instance.py  mcp_server.py  pyproject.toml  run_server.py  setup.py  test_scan.py  test_tools.py
.cursor/: mcp.json
Nmap/: Zenmap.lnk
ZAP/Zed Attack Proxy/.install4j/: inst_jre.cfg  install.prop  response.varfile
tools/: abuseipdb_check.py  dns_scan.py  email_scan.py  nikto_scan.py  nmap_scan.py  skor_hesaplayici.py  sslyze_scan.py  zap_scan.py
